--- a/index.html
+++ b/index.html
@@ -27,17 +27,17 @@
             <div class="d-flex   justify-content-between hiddenItem">
                 <div class="d-flex gray justify-content-between align-content-center w-100 ">
                     <div class="d-flex spacing">
-                        <p>Quem somos</p>
+                        <p class="mb-0">Quem somos</p>
                         |
-                        <p>Expediente</p>
+                        <p class="mb-0">Expediente</p>
                         |
-                        <p>Anuncie</p>
+                        <p class="mb-0">Anuncie</p>
                         |
-                        <p>Fale Conosco</p>
+                        <p class="mb-0">Fale Conosco</p>
                     </div>
                     <div class="d-flex calendarContent align-items-center">
                         <img src="assets/calendar.svg" alt="Calendário" />
-                        <p class="calendarDate"></p>
+                        <p class="calendarDate mb-0"></p>
                     </div>
                 </div>
             </div>
@@ -47,11 +47,11 @@
         <div class="d-flex bgOrange text-white justify-content-center w-100  position-relative">
             <div class="d-flex justify-content-lg-between align-items-center w-100 max-content hiddenItem navBarHeight">
                 <div class="d-flex navSpacing ">
-                    <p>Editorias</p>
-                    <p>Vídeos</p>
-                    <p>Olhar Agro & Negócios</p>
-                    <p>Olhar Conceito</p>
-                    <p>Olhar Jurídico</p>
+                    <p class="mb-0">Editorias</p>
+                    <p class="mb-0">Vídeos</p>
+                    <p class="mb-0">Olhar Agro & Negócios</p>
+                    <p class="mb-0">Olhar Conceito</p>
+                    <p class="mb-0">Olhar Jurídico</p>
                 </div>
                 <div class="d-flex searchContent align-items-center">
                     <img src="assets/search.svg" alt="Pesquisa" />
@@ -64,14 +64,51 @@
         <div class="container-fluid container mt-5">
             <div class="row">
                 <div class="col-lg-9">
-                    <div class="mainPhoto">
-                        <div>
-                            <h3>Aditivo contratual</h3>
-                            <h4>
-                                Após aprovar auxílio-transporte, Câmara de Cuiabá prorroga contrato de fornecimento de combustível
-                            </h4>
+
+
+                    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                        <ol class="carousel-indicators">
+                            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                        </ol>
+                        <div class="carousel-inner roudend-carousel">
+                            <div class="carousel-item active">
+                                <div class="carousel-caption d-none d-md-block ">
+                                    <h5>Aditivo contratual</h5>
+                                    <p>Após aprovar auxílio-transporte, Câmara de Cuiabá prorroga contrato de fornecimento de combustível</p>
+                                </div>
+                                <div class="gradient">
+                                </div>
+                                <img class="d-block w-100" src="assets/camara.jpg" alt="First slide">
+                            </div>
+                            <div class="carousel-item">
+                                <div class="carousel-caption d-none d-md-block ">
+                                    <h5>Aditivo contratual</h5>
+                                    <p>Após aprovar auxílio-transporte, Câmara de Cuiabá prorroga contrato de fornecimento de combustível</p>
+                                </div>
+                                <div class="gradient">
+                                </div>
+                                <img class="d-block w-100" src="assets/camara.jpg" alt="Second slide">
+                            </div>
+                            <div class="carousel-item">
+                                <div class="carousel-caption d-none d-md-block ">
+                                    <h5>Aditivo contratual</h5>
+                                    <p>Após aprovar auxílio-transporte, Câmara de Cuiabá prorroga contrato de fornecimento de combustível</p>
+                                </div>
+                                <div class="gradient">
+                                </div>
+                                <img class="d-block w-100" src="assets/camara.jpg" alt="Third slide">
+                            </div>
                         </div>
-                        <img src="assets/camara.jpg" alt="camara Cuiabá" />
+                        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Previous</span>
+                        </a>
+                        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Next</span>
+                        </a>
                     </div>
 
                     <div class="contentBottom mt-4 row">
@@ -116,7 +153,7 @@
                 <div class="col-lg-3">
                     <header class="d-flex align-items-center bgOrange hotHeader text-white">
                         <img src="assets/fire.svg" alt="fogo" />
-                        <p class="d-flex h-100 align-items-md-center">PICANTES</p>
+                        <p class="d-flex h-100 align-items-md-center mb-0">PICANTES</p>
                     </header>
 
                     <div class="d-flex flex-column hotContent">
